# search_relevance

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
configs/: train.yaml
data/models/: bm25.pkl  tfidf.pkl
data/processed/: shopping_queries_dataset_final.csv
models/BM25/: bm25_implementation.ipynb
models/TF-IDF/: tf_idf.ipynb
notebooks/: bm25.ipynb  cleaning_dataset.ipynb  tf_idf.ipynb
scripts/: build_dataset.py  train.py
src/: build_dataset.py  pipeline.py
src/rankers/: base.py  bm25.py  tf_idf.py
src/utils/: data_loader.py  normalize.py  preprocessing.py
